# auge

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: inout.rs  main.rs  types.rs
src/filters/: blob_detect.rs  dotart.rs  dynthres.rs  edge.rs  gblur.rs  grayscale.rs  invert.rs  mod.rs  resize.rs  sepia.rs
